[metadata]
name = dc_butler
version = 0.0.1
author = Eunjung Choi
author_email = im.your.energy@gmail.com
description = A simple discord-bots package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eunjungchoi/discord_bots
project_urls =
    Bug Tracker = https://github.com/eunjungchoi/discord_bots/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src